k8s/server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-ingress
  annotations:
    # kubernetes.io/ingress.class: "gce"            # Use GKE-managed ingress
    # kubernetes.io/ingress.allow-http: "true"
    # kubernetes.io/ingress.allow-https: "true"
    nginx.ingress.kubernetes.io/rewrite-target: / 
    nginx.ingress.kubernetes.io/ssl-redirect: "false" 
    nginx.ingress.kubernetes.io/cors-allow-origin: "*" 
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS" 
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization" 
    nginx.ingress.kubernetes.io/cors-expose-headers: "Content-Length,Content-Range"
spec:
  ingressClassName: nginx
  rules:
    - host: server.codevo.live  # Change this to your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: server
                port:
                  number: 4000
