k8s/yjs-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yjs-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yjs-server
  template:
    metadata:
      labels:
        app: yjs-server
    spec:
      containers:
        - name: yjs
          image: extremecoder01/yjs-server 
          ports:
            - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: yjs-server
spec:
  selector:
    app: yjs-server
  ports:
    - port: 3003
      targetPort: 3003

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yjs-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: yjs.127.0.0.1.sslip.io  
      http:
        paths:
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: yjs-server
                port:
                  number: 3003
